--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
 <body>
     <div class="container">
         <h1>INSERT LUST COIN CHECKER</h1>
-        <textarea id="address" placeholder="Paste Meme Coin Address Here So You Dont Get Rugged!!!!"></textarea>
+        <textarea id="address" placeholder="TURN OFF POP UP BLOCKERS TO USE !!! Paste Meme Coin Address Here So You Dont Get Rugged!!!!"></textarea>
         <button onclick="openAnalysisSites()">CHECK</button>
         <div class="links">
             <a href="/about">About Us</a>
