--- a/templates/results.html
+++ b/templates/results.html
@@ -106,7 +106,7 @@
         <div class="iframe-container">
             <div class="iframe-wrapper">
                 <h2>RugCheck</h2>
-                <a href="https://rugcheck.xyz/tokens/{{ address }}" target="_blank" class="iframe-overlay"></a>
+                <a href="https://rugcheck.xyz/auth?redirectTo=%2Ftokens%{{ address }}" target="_blank" class="iframe-overlay"></a>
                 <iframe src="https://rugcheck.xyz/tokens/{{ address }}" title="RugCheck"></iframe>
             </div>
 
@@ -129,15 +129,15 @@
             </div>
 
             <div class="iframe-wrapper">
-                <h2>GMGN Telegram Bot</h2>
-                <a href="https://t.me/gmgnaibot?start=i_Kt4NLeB3" target="_blank" class="iframe-overlay"></a>
-                <iframe src="https://t.me/gmgnaibot?start=i_Kt4NLeB3" title="GMGN Telegram Bot"></iframe>
+                <h2>Bubble Maps</h2>
+                <a href="https://app.bubblemaps.io/sol/token/{{ address }}" target="_blank" class="iframe-overlay"></a>
+                <iframe src="https://app.bubblemaps.io/sol/token/{{ address }}" title="Bubble Maps"></iframe>
             </div>
 
             <div class="iframe-wrapper">
-                <h2>DexScreener</h2>
-                <a href="https://dexscreener.com/solana/{{ address }}" target="_blank" class="iframe-overlay"></a>
-                <iframe src="https://dexscreener.com/solana/{{ address }}" title="DexScreener"></iframe>
+                <h2>TOSHI BET CASINO NO KYC!</h2>
+                <a href="https://www.toshi.bet/r/gelo" target="_blank" class="iframe-overlay"></a>
+                <iframe src="https://www.toshi.bet/r/gelo" title="Toshi.bet"></iframe>
             </div>
         </div>
     </div>
